<resources>
    <string name="app_name">Android School</string>
    <string name="hello_eltex">Hello Eltex!</string>
    <string name="share_content_description">Share</string>
    <string name="participate_content_description">Join</string>
    <string name="like_content_description">Like</string>
    <string name="menu_content_description">Menu</string>
    <string name="not_implemented">Not implemented</string>
    <string name="avatar">Avatar</string>
    <string name="offline" translatable="false">Offline</string>
    <string name="online" translatable="false">Online</string>
    <string name="date_today">Today</string>
    <string name="date_yesterday">Yesterday</string>
    <string name="save">Save event</string>
    <string name="new_event_title">New event</string>
    <string name="edit_event_title">Edit event</string>
    <string name="content_hint">Content</string>
    <string name="empty_event_error">Text cannot be blank</string>
    <string name="add_button_description">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="share_text">Author: %s, content: %s</string>
    <string name="events_menu">Events</string>
    <string name="users_menu">Users</string>
    <string name="posts_menu">Posts</string>
    <string name="network_error">Network error</string>
    <string name="retry">Retry</string>
    <string name="unknown_error">Unknown error</string>
    <string name="edit_post">Edit post</string>
    <string name="new_post">New post</string>
    <string name="date_picker_title">Select a date</string>
    <string name="selected_date_hint">Selected date</string>
    <string name="select_date_button">Select a date</string>
    <string name="post_skeleton_published_text" translatable="false">11.05.22 11:21</string>
    <string name="post_skeleton_content_text" translatable="false">Listen, how do you feel about getting together with a big group and playing board games? I have some cool games, we can have a board game evening! Write me a PM or call</string>
    <string name="post_skeleton_author_text" translatable="false">Lydia Westervelt</string>
    <string name="event_skeleton_type_text" translatable="false">Offline</string>
    <string name="event_skeleton_datetime_text" translatable="false">16.05.22 12:00</string>
    <string name="event_skeleton_link_text" translatable="false">https://m2.material.io/components/cards</string>
</resources>