<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/event_skeleton_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="0dp"
        android:paddingBottom="12dp"
        tools:context=".activity.MainActivity">

        <ImageView
            android:id="@+id/event_skeleton_avatar"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:contentDescription="@string/avatar"
            app:srcCompat="@drawable/avatar_background"
            app:tint="?colorOutlineVariant"
            tools:ignore="ImageContrastCheck"
            app:layout_constraintBottom_toBottomOf="@id/event_skeleton_published"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/event_skeleton_author" />

        <TextView
            android:id="@+id/event_skeleton_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:foreground="?colorOutlineVariant"
            android:maxLines="1"
            android:text="@string/post_skeleton_author_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/event_skeleton_published"
            app:layout_constraintEnd_toStartOf="@id/event_skeleton_menu"
            app:layout_constraintStart_toEndOf="@id/event_skeleton_avatar"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/event_skeleton_published"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:foreground="?colorOutlineVariant"
            android:maxLines="1"
            android:text="@string/post_skeleton_published_text"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/event_skeleton_menu"
            app:layout_constraintStart_toEndOf="@id/event_skeleton_avatar"
            app:layout_constraintTop_toBottomOf="@id/event_skeleton_author"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <ImageView
            android:id="@+id/event_skeleton_menu"
            android:layout_width="@dimen/icon_menu_size"
            android:layout_height="@dimen/icon_menu_size"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/menu_content_description"
            android:src="@drawable/icon_menu_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/event_skeleton_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ellipsize="end"
            android:foreground="?colorOutlineVariant"
            android:maxLines="1"
            android:text="@string/event_skeleton_type_text"
            android:textColor="#3949AB"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/event_skeleton_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_skeleton_published"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/event_skeleton_datetime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:foreground="?colorOutlineVariant"
            android:maxLines="1"
            android:text="@string/event_skeleton_datetime_text"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/event_skeleton_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_skeleton_type"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/event_skeleton_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:foreground="?colorOutlineVariant"
            android:letterSpacing="0.02"
            android:text="@string/post_skeleton_content_text"
            android:textColor="?colorOnSurfaceVariant"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_skeleton_datetime"
            tools:ignore="VisualLintLongText,TextContrastCheck" />

        <TextView
            android:id="@+id/event_skeleton_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:foreground="?colorOutlineVariant"
            android:text="@string/event_skeleton_link_text"
            android:textColor="?colorPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/event_skeleton_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_skeleton_content"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/event_skeleton_like"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/like_content_description"
            android:enabled="false"
            app:icon="@drawable/liked_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_skeleton_link"
            tools:text="3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/event_skeleton_share"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/share_content_description"
            android:enabled="false"
            app:icon="@drawable/baseline_share_24"
            app:layout_constraintStart_toEndOf="@id/event_skeleton_like"
            app:layout_constraintTop_toBottomOf="@id/event_skeleton_link" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/event_skeleton_participate"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="22dp"
            android:contentDescription="@string/participate_content_description"
            android:enabled="false"
            app:icon="@drawable/people_outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_skeleton_link"
            tools:text="2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>