<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="0dp"
        android:paddingBottom="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/post_skeleton_avatar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/avatar"
            app:layout_constraintBottom_toBottomOf="@id/post_skeleton_published"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/post_skeleton_author"
            app:srcCompat="@drawable/avatar_background"
            app:tint="?colorOutlineVariant"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/post_skeleton_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:foreground="?colorOutlineVariant"
            android:maxLines="1"
            android:text="@string/post_skeleton_author_text"
            android:textColor="?colorOnSurface"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/post_skeleton_authorOffset"
            app:layout_constraintEnd_toStartOf="@id/post_skeleton_menu"
            app:layout_constraintStart_toEndOf="@id/post_skeleton_avatar"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <Space
            android:id="@+id/post_skeleton_authorOffset"
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            app:layout_constraintBottom_toTopOf="@id/post_skeleton_published"
            app:layout_constraintStart_toEndOf="@id/post_skeleton_avatar"
            app:layout_constraintTop_toBottomOf="@id/post_skeleton_author" />

        <TextView
            android:id="@+id/post_skeleton_published"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:foreground="?colorOutlineVariant"
            android:text="@string/post_skeleton_published_text"
            app:layout_constraintStart_toEndOf="@id/post_skeleton_avatar"
            app:layout_constraintTop_toBottomOf="@id/post_skeleton_authorOffset"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/post_skeleton_menu"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/menu_content_description"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_more_vert_24" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/post_skeleton_headerBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:barrierMargin="12dp"
            app:constraint_referenced_ids="post_skeleton_published,post_skeleton_menu,post_skeleton_avatar" />

        <TextView
            android:id="@+id/post_skeleton_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:foreground="?colorOutlineVariant"
            android:text="@string/post_skeleton_content_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_skeleton_headerBarrier"
            tools:ignore="VisualLintLongText,TextContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/post_skeleton_like"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/like_content_description"
            android:enabled="false"
            app:icon="@drawable/liked_icon"
            app:layout_constraintTop_toBottomOf="@id/post_skeleton_content"
            tools:text="10" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/post_skeleton_share"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/share_content_description"
            android:enabled="false"
            app:icon="@drawable/baseline_share_24"
            app:layout_constraintStart_toEndOf="@id/post_skeleton_like"
            app:layout_constraintTop_toBottomOf="@id/post_skeleton_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>